2013-03-28  Pedro Alves  <palves@redhat.com>

	* gdb.base/list.exp (test_listsize): Adjust test to make sure we
	list the whole file.

2013-03-28  Pedro Alves  <palves@redhat.com>

	* gdb.base/list.exp (set_listsize): Use gdb_test_no_output for
	"set listsize".

2013-03-26  Markus Metzger  <markus.t.metzger@intel.com>

	* gdb.btrace/enable.exp: Add regression test.

2013-03-22  Jan Kratochvil  <jan.kratochvil@redhat.com>
	    Pedro Alves  <palves@redhat.com>

	* gdb.server/server-kill.c: New file.
	* gdb.server/server-kill.exp: New file.

2013-03-21  Pedro Alves  <palves@redhat.com>

	* gdb.trace/trace-buffer-size.exp (get default buffer size):
	Expect $gdb_prompt in gdb_test_multiple.

2013-03-20  Pedro Alves  <palves@redhat.com>

	PR gdb/15289

	* gdb.base/remote.exp: Test
	"set remote hardware-watchpoint-limit -1",
	"set remote hardware-breakpoint-limit -1",
	"set remote hardware-watchpoint-limit 2147483647" and
	"set remote hardware-breakpoint-limit 2147483647".

2013-03-14  Sergio Durigan Junior  <sergiodj@redhat.com>

	PR c++/15203
	PR c++/15210
	* gdb.cp/m-static.cc (keepalive_int): New function.
	(gnu_obj_1::method): New variable `sintvar', call `keepalive_int'.
	* gdb.cp/m-static.exp: New test for `sintvar'.

2013-03-17  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* gdb.base/valgrind-infcall.exp
	(continue #$continue_count) <remote connection closed>
	(continue #$continue_count) <valgrind vgdb has terminated>: Add kill of
	$valgrind_pid.

2013-03-12  Paul Hilfinger  <hilfingr@adacore.com>

        * gdb.ada/expr_delims.exp: New file.
        * gdb.ada/expr_delims/foo.adb: New file.
	* gdb.ada/expr_delims/pck.ads: New file.
	* gdb.ada/expr_delims/pck.adb: New file.

2013-03-11  Keith Seitz  <keiths@redhat.com>

	* watchpoint.exp (test_no_hw_watchpoints): Add test using
	both condition and thread.  Then delete the watchpoint.

2013-03-11  Christian Himpel  <christian.himpel@intel.com>

	* Makefile.in: Add btrace testsuite.
	* configure: Regenerated.